--- a/html/pages/ProcessDokuBa_project.html
+++ b/html/pages/ProcessDokuBa_project.html
@@ -10,14 +10,14 @@
     integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-  <link rel="shortcut icon" href="/img/LogogpRofil.ico">
+  <link rel="shortcut icon" href="/img/LogoGreenRounded.ico">
 </head>
 
 <body>
   <div class="container max-w-screen-xl row_pr">
     <div class="projectAnim1">
       <div class="alignCenter">
-        <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" alt="Logo"/>
+        <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" alt="Logo" />
       </div>
       <div class="container_ref">
         <div class="row justify-content-center">
@@ -41,67 +41,67 @@
       <h1 class="header2">Bachelors Thesis</h1>
     </div>
     <div id="carouselExampleDark" class="carousel carousel-dark slide mb-5 projectAnim2" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
-            aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
-          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3" aria-label="Slide 4"></button>
-          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="4" aria-label="Slide 5"></button>
-          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="5" aria-label="Slide 6"></button>
-        </div>
-        <div class="carousel-inner">
-            <div class="carousel-item">
-              <img src="../../img/BA/menuFrame.jpg" class="d-block w-100 rounded2 zoomD" alt="Hand Menu Image">
-              <div class="carousel-caption d-none d-md-block bg-dark rounded2 bg-opacity-50">
-                <h5 class="header_pr">Hand Menu.</h5>
-                <p class="text_prWhite">Navigate between modes via the handmenu.</p>
-              </div>
-            </div>
-          <div class="carousel-item active">
-            <img src="../../img/BA/drawFrame.jpg" class="d-block w-100 rounded2 zoomD" alt="Draw Mode Image">
-            <div class="carousel-caption d-none d-md-block bg-dark rounded2 bg-opacity-50">
-              <h5 class="header_pr">Draw Mode.</h5>
-              <p class="text_prWhite">Here you can log in with your registered Account.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="../../img/BA/eraseFrame.jpg" class="d-block w-100 rounded2 zoomD" alt="Erase Mode Image">
-            <div class="carousel-caption d-none d-md-block bg-dark rounded2 bg-opacity-50">
-              <h5 class="header_pr">Erase Mode</h5>
-              <p class="text_prWhite">Erase already drawn lines and textobjects.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="../../img/BA/textFram1.jpg" class="d-block w-100 rounded2 zoomD" alt="Text Mode Image">
-            <div class="carousel-caption d-none d-md-block bg-dark rounded2 bg-opacity-50">
-              <h5 class="header_pr">Text Mode.</h5>
-              <p class="text_prWhite">Record text-to-speech text for the textobjects.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="../../img/BA/textFrame2.jpg" class="d-block w-100 rounded2 zoomD" alt="Text Mode Image">
-            <div class="carousel-caption d-none d-md-block bg-dark rounded2 bg-opacity-50">
-              <h5 class="header_pr">Text Mode.</h5>
-              <p class="text_prWhite">Create textobjects to document text.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="../../img/BA/settings.jpg" class="d-block w-100 rounded2 zoomD" alt="Settings Menu Image">
-            <div class="carousel-caption d-none d-md-block bg-dark rounded2 bg-opacity-50">
-              <h5 class="header_pr">Settings.</h5>
-              <p class="text_prWhite">Adjust paramaters on runtime.</p>
-            </div>
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        </button>
-        <button class="carousel-control-next grey" type="button" data-bs-target="#carouselExampleDark"
-          data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        </button>
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
+          aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3" aria-label="Slide 4"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="4" aria-label="Slide 5"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="5" aria-label="Slide 6"></button>
       </div>
+      <div class="carousel-inner">
+        <div class="carousel-item">
+          <img src="../../img/BA/menuFrame.jpg" class="d-block w-100 rounded2 zoomD" alt="Hand Menu Image">
+          <div class="carousel-caption d-none d-md-block bg-dark rounded2 bg-opacity-50">
+            <h5 class="header_pr">Hand Menu.</h5>
+            <p class="text_prWhite">Navigate between modes via the menu.</p>
+          </div>
+        </div>
+        <div class="carousel-item active">
+          <img src="../../img/BA/drawFrame.jpg" class="d-block w-100 rounded2 zoomD" alt="Draw Mode Image">
+          <div class="carousel-caption d-none d-md-block bg-dark rounded2 bg-opacity-50">
+            <h5 class="header_pr">Draw Mode.</h5>
+            <p class="text_prWhite">Draw with your fingers activated by the select pose.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="../../img/BA/eraseFrame.jpg" class="d-block w-100 rounded2 zoomD" alt="Erase Mode Image">
+          <div class="carousel-caption d-none d-md-block bg-dark rounded2 bg-opacity-50">
+            <h5 class="header_pr">Erase Mode</h5>
+            <p class="text_prWhite">Erase already drawn lines and textobjects.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="../../img/BA/textFram1.jpg" class="d-block w-100 rounded2 zoomD" alt="Text Mode Image">
+          <div class="carousel-caption d-none d-md-block bg-dark rounded2 bg-opacity-50">
+            <h5 class="header_pr">Text Mode.</h5>
+            <p class="text_prWhite">Record text-to-speech text for the textobjects.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="../../img/BA/textFrame2.jpg" class="d-block w-100 rounded2 zoomD" alt="Text Mode Image">
+          <div class="carousel-caption d-none d-md-block bg-dark rounded2 bg-opacity-50">
+            <h5 class="header_pr">Text Mode.</h5>
+            <p class="text_prWhite">Create textobjects to document text.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="../../img/BA/settings.jpg" class="d-block w-100 rounded2 zoomD" alt="Settings Menu Image">
+          <div class="carousel-caption d-none d-md-block bg-dark rounded2 bg-opacity-50">
+            <h5 class="header_pr">Settings.</h5>
+            <p class="text_prWhite">Adjust parameters on runtime.</p>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      </button>
+      <button class="carousel-control-next grey" type="button" data-bs-target="#carouselExampleDark"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      </button>
+    </div>
     <!-- Box for fullscreen view of image! -->
     <div id="lightbox"> </div>
     <div class="projectAnim3">
@@ -110,30 +110,35 @@
         <div class="card-body">
           <h5 class="card-title">Task</h5>
           <p class="card-text">
-            This project was my bachelor thesis from 2023. The main goal was to implement a Software Add-on 
-            to provide a documentation toolbox in the AR space of the Microsoft HoloLens. Furthermore, the software add-on was evaluated with 
+            This project was my bachelor thesis from 2023. The main goal was to implement a Software Add-on
+            to provide a documentation toolbox in the AR space of the Microsoft HoloLens. Furthermore, the software
+            add-on was evaluated with
             the Port of Kiel to analyse the prototype in its functionality and possible use cases.
           </p>
           <h5 class="card-title">Functionality</h5>
           <p class="card-text">
-            The software Add-on has five major functionalitys to provide a semmlessly documentations process: 
-            (1) Draw 
-            (2) Erase 
-            (3) Text 
-            (4) Save/Load 
-            (5) Settings 
-            With these core functions the user is able to document any give business process within or outside the company.
+            The software Add-on has five major functionality to provide a seamless documentation process:</p>
+          <p class="card-text">(1) Draw </p>
+          <p class="card-text">(2) Erase </p>
+          <p class="card-text">(3) Text </p>
+          <p class="card-text">(4) Save/Load </p>
+          <p class="card-text">(5) Settings </p>
+          <p class="card-text">
+            With these core functions the user is able to document any give business process within or outside as
+            company.
           </p>
         </div>
-    </div>
-    <div class="card mb-5 card_pr">
+      </div>
+      <div class="card mb-5 card_pr">
         <h5 class="card-header header_pr">Demovideo</h5>
         <div class="card-body">
-            <div class="container-video rounded2">
-            <iframe class="responsive-iframe" src="../../img/BA/DemoVideo.mp4" title="Demovideo of Software"></iframe>
-            </div>
+          <div class="container-video rounded2">
+            <iframe class="responsive-iframe"
+              src="https://drive.google.com/file/d/11koyMmhwNFgksniGVj6qmS3b_gqMTlP-/preview"
+              title="Demovideo of Software"></iframe>
+          </div>
         </div>
-    </div>
+      </div>
       <div class="card mb-5 card_pr">
         <h5 class="card-header header_pr">Components</h5>
         <div class="card-body">
@@ -181,7 +186,10 @@
     <p class="footer headerAnim">© Philo Klemenz 2022</p>
   </footer>
   </head>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
   <script src="/html/functions/imageAnimation.js"></script>
 </body>
+
 </html>
