--- a/html/pages/projects.html
+++ b/html/pages/projects.html
@@ -10,7 +10,7 @@
         integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-    <link rel="shortcut icon" href="/img/LogogpRofil.ico">
+    <link rel="shortcut icon" href="/img/LogoGreenRounded.ico">
 </head>
 
 <body>
@@ -101,6 +101,26 @@
                 </a>
             </div>
             <div class="col">
+                <a class="a_ref" href="./homeassistant_project.html">
+                    <div class="card card_pr">
+                        <img src="../../img/homeassistant/nudelHome.png" class="img_pr" alt="Skyscrapers" />
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-md-auto">
+                                    <h5 class="header_prMain">NudelHome</h5>
+                                </div>
+                                <div class="col-md-auto"><i class="fa fa-check-circle green" aria-hidden="true"></i>
+                                </div>
+                            </div>
+                            <p class="text_pr">
+                                Here I deployed my own Homeserver for all my Smart Home Devices.
+                                It runs locally on a raspberry pi.
+                            </p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col">
                 <a class="a_ref" href="./trintel_project.html">
                     <div class="card card_pr">
                         <img src="../../img/trintelV4_transparentB.jpg" class="img_pr" alt="Trintel Logo" />
@@ -153,26 +173,6 @@
                             </div>
                             <p class="text_pr">In this project, I wanted to deploy my own voice assistant because of
                                 privacy concerns with my Google Assistant.</p>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col">
-                <a class="a_ref" href="./homeassistant_project.html">
-                    <div class="card card_pr">
-                        <img src="../../img/homeassistant_logo.jpg" class="img_pr" alt="Skyscrapers" />
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="col-md-auto">
-                                    <h5 class="header_prMain">HomeAssistant</h5>
-                                </div>
-                                <div class="col-md-auto"><i class="fa fa-check-circle green" aria-hidden="true"></i>
-                                </div>
-                            </div>
-                            <p class="text_pr">
-                                Here I deployed my own Homeserver for all my Smart Home Devices.
-                                It runs locally on a raspberry pi.
-                            </p>
                         </div>
                     </div>
                 </a>
