--- a/html/pages/nudelcloud_project.html
+++ b/html/pages/nudelcloud_project.html
@@ -17,7 +17,7 @@
   <div class="container max-w-screen-xl row_pr">
     <div class="projectAnim1">
       <div class="alignCenter">
-        <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" alt="Logo"/>
+        <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" alt="Logo" />
       </div>
       <div class="container_ref">
         <div class="row justify-content-center">
@@ -43,50 +43,50 @@
     <div class="container max-w-screen-xl row_pr">
       <div id="carouselExampleDark" class="carousel carousel-dark mb-5 slide projectAnim2" data-bs-ride="carousel">
         <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button btn-dark" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
+            aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
+            aria-label="Slide 2"></button>
+          <button type="button btn-dark" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"
+            aria-label="Slide 3"></button>
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="../../img/Nudelcloud/Cloud Login.png" class="d-block w-100 rounded2 zoomD" alt="Cloud Login Image">
+            <img src="../../img/Nudelcloud/Cloud Login.png" class="d-block w-100 rounded2 zoomD"
+              alt="Cloud Login Image">
             <div class="carousel-caption d-none d-md-block bg-dark rounded2 bg-opacity-50">
               <h5 class="header_pr">LogIn Page.</h5>
-            <p class="text_prWhite">Log into the cloud with different users.</p>
+              <p class="text_prWhite">Log into the cloud with different users.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="../../img/Nudelcloud/CloudDashboard.png" class="d-block w-100 rounded2 zoomD" alt="Cloud Dashboard Image">
+            <img src="../../img/Nudelcloud/CloudDashboard.png" class="d-block w-100 rounded2 zoomD"
+              alt="Cloud Dashboard Image">
             <div class="carousel-caption d-none d-md-block bg-dark rounded2 bg-opacity-50">
               <h5 class="header_pr">Dashboard.</h5>
-            <p class="text_prWhite">Check all different services via the dashbard.</p>
+              <p class="text_prWhite">Check all different services via the dashbard.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="../../img/Nudelcloud/CloudFiles.png" class="d-block w-100 rounded2 zoomD" alt="File Browser Image">
+            <img src="../../img/Nudelcloud/CloudFiles.png" class="d-block w-100 rounded2 zoomD"
+              alt="File Browser Image">
             <div class="carousel-caption d-none d-md-block bg-dark rounded2 bg-opacity-50">
               <h5 class="header_pr">Files.</h5>
-            <p class="text_prWhite">Browse all your files with the file browser.</p>
+              <p class="text_prWhite">Browse all your files with the file browser.</p>
             </div>
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         </button>
-        <button class="carousel-control-next grey" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+        <button class="carousel-control-next grey" type="button" data-bs-target="#carouselExampleDark"
+          data-bs-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
         </button>
       </div>
       <!-- Box for fullscreen view of image! -->
       <div id="lightbox"> </div>
       <div class="projectAnim3">
-        <div class="card mb-5 card_pr">
-          <h5 class="card-header header_pr">Online Instance</h5>
-          <div class="card-body">
-            <p class="card-text"><a href="https://cloud.philoklemenz.de/">https://cloud.philoklemenz.de</a>
-            </p>
-          </div>
-        </div>
         <div class="card mb-5 card_pr">
           <h5 class="card-header header_pr">About the Project</h5>
           <div class="card-body">
@@ -96,10 +96,10 @@
             <h5 class="card-title">Functionality</h5>
             <p class="card-text">
               This Cloud-Storage is selfhosted at a german server provider to get the best of both sides being
-              performance and privacy. Due to the location being in the EU the data protection law is a lot better 
-              than all the other providers such as Google or Microsoft wich are hosting in the USA. Furthermore 
-              Nextcloud is open-source and offers a lot of extra features such as an email client, 
-              office tools, calender and a lot more. I am Using it as my Hub for everything important during my 
+              performance and privacy. Due to the location being in the EU the data protection law is a lot better
+              than all the other providers such as Google or Microsoft wich are hosting in the USA. Furthermore
+              Nextcloud is open-source and offers a lot of extra features such as an email client,
+              office tools, calender and a lot more. I am Using it as my Hub for everything important during my
               daily routine. For more information visit:
             </p>
             <a href="https://nextcloud.com/athome/">https://nextcloud.com/athome/</a>
@@ -109,11 +109,13 @@
           <h5 class="card-header header_pr">Source Project</h5>
           <div class="card-body">
             <h5 class="card-title">Source Project</h5>
-            <p class="card-text"><a href="https://nextcloud.com/" style="text-decoration: none;">https://nextcloud.com/</a></p>
+            <p class="card-text"><a href="https://nextcloud.com/"
+                style="text-decoration: none;">https://nextcloud.com/</a></p>
           </div>
           <div class="card-body">
             <h5 class="card-title">GitHub</h5>
-            <p class="card-text"><a href="https://github.com/nextcloud/server" style="text-decoration: none;">https://github.com/nextcloud/server</a></p>
+            <p class="card-text"><a href="https://github.com/nextcloud/server"
+                style="text-decoration: none;">https://github.com/nextcloud/server</a></p>
           </div>
         </div>
         <div class="card mb-5 card_pr">
@@ -181,7 +183,10 @@
       </footer>
     </div>
   </div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
   <script src="/html/functions/imageAnimation.js"></script>
 </body>
+
 </html>
