--- a/html/pages/projects.html
+++ b/html/pages/projects.html
@@ -153,7 +153,7 @@
                                 </div>
                             </div>
                             <p class="text_pr">
-                                A bunch of script that automates different actions in Spotify, run at a specific time and accesses external databases for songs. 
+                                A python bot that automates different actions in Spotify, run at a specific time and accesses external databases for songs. 
                             </p>
                         </div>
                     </div>
