--- a/html/pages/projects.html
+++ b/html/pages/projects.html
@@ -49,7 +49,7 @@
                                 <div class="col-md-auto">
                                     <h5 class="header_prMain">AR Process-Documentation</h5>
                                 </div>
-                                <div class="col-md-auto"><i class="fa fa-spinner grey" aria-hidden="true"></i>
+                                <div class="col-md-auto"><i class="fa fa-check-circle green" aria-hidden="true"></i>
                                 </div>
                             </div>
                             <p class="text_pr">
