--- a/index.html
+++ b/index.html
@@ -114,6 +114,14 @@
         </div>
         <div class="col-12 col-lg-5 mb-10 mb-lg-0">
           <h1 class="ls-tight font-bolder display-3 mb-5 headerAnim">
+            PMO <br /> @ ITU Consult GmbH.
+          </h1>
+          <p class="lead mb-10 paraAnimSmall">
+            I am working full-time at the ITU Consult GmbH in the Project Management Office (PMO). 
+            My job is to organize the team and help with all kinds of paperwork during each phase of the project.
+          </p>
+          <img src="/img/index/itucLogo.png" class="img-fluid shadow-4 position-relative rounded2 my-5 imgAnimSmall" />
+          <h1 class="ls-tight font-bolder display-3 mb-5 headerAnim">
             Student at CAU<br />Business Informatics.
           </h1>
           <p class="lead mb-10 paraAnimSmall">
