--- a/index.html
+++ b/index.html
@@ -110,25 +110,34 @@
 
         <!--Show small image only in Media Size < Large-->
         <div class="imgsmall d-block d-lg-none col-12 col-lg-6 ms-lg-auto">
-          <img src="/img/index/portrait_half_cropped.jpg" class="img-fluid shadow-4 position-relative rounded2 headerAnim" />
+          <img src="/img/index/portrait_half_cropped.jpg"
+            class="img-fluid shadow-4 position-relative rounded2 headerAnim" />
         </div>
         <div class="col-12 col-lg-5 mb-10 mb-lg-0">
           <h1 class="ls-tight font-bolder display-3 mb-5 headerAnim">
-            PMO <br /> @ ITU Consult GmbH.
+            Projectmanagement <br /> @ ITU Consult GmbH.
           </h1>
           <p class="lead mb-10 paraAnimSmall">
-            I am working full-time at the ITU Consult GmbH in the Project Management Office (PMO). 
-            My job is to organize the team and help with all kinds of paperwork during each phase of the project.
+            I am working full-time at the ITU Consult GmbH in the Projectmanagment.
+            My job is to organize and manage the team as well as helping with all kinds of paperwork during each phase
+            of the project.
           </p>
-          <img src="/img/index/itucLogo.png" class="img-fluid shadow-4 position-relative rounded2 my-5 imgAnimSmall" />
+          <a href="https://ituc.de/">
+            <img src="/img/index/itucLogo.png"
+              class="img-fluid shadow-4 position-relative rounded2 my-5 imgAnimSmall" />
+          </a>
           <h1 class="ls-tight font-bolder display-3 mb-5 headerAnim">
             Student at CAU<br />Business Informatics.
           </h1>
           <p class="lead mb-10 paraAnimSmall">
-            I am a passionate and well structured student getting into Business Informatics (Bachelor),
-            specializing in Cloud- and Webdevelopement as well as Process Mining with a focus on Projectmanagement.<br />
+            In my time at CAU Kiel, I learned about a lot of interesting topics from the whole spectrum of informatics,
+            business, economy, law and IT Security.
+            I specialized in IT-Project management and graduated with a bachelor's degree in the topic of
+            <a href="/html/pages/ProcessDokuBa_project.html">"Augmented Reality in Logistic Processes"</a>.<br />
           </p>
-          <img src="/img/index/uni_cau.jpg" class="img-fluid shadow-4 position-relative rounded2 my-5 imgAnimSmall" />
+          <a href="https://www.uni-kiel.de/">
+            <img src="/img/index/uni_cau.jpg" class="img-fluid shadow-4 position-relative rounded2 my-5 imgAnimSmall" />
+          </a>
           <h1 class="ls-tight font-bolder display-3 mb-5 pt-5 headerAnim">
             Graduation<br />Gymnasium.
           </h1>
@@ -137,7 +146,10 @@
             informatics as well as mathematics and physics at the Phillip Melanchton
             Gymnasium Meine.
           </p>
-          <img src="/img/index/gymnasium_pmg.png" class="img-fluid shadow-4 position-relative rounded2 my-5 imgAnimSmall" />
+          <a href="https://pmg-meine.de/">
+            <img src="/img/index/gymnasium_pmg.png"
+              class="img-fluid shadow-4 position-relative rounded2 my-5 imgAnimSmall" />
+          </a>
           <h1 class="ls-tight font-bolder display-3 mb-5 pt-5 headerAnim">America.</h1>
           <p class="lead mb-10 paraAnimSmall">
             From 2012 - 2015 I have been living in the United Staates of
@@ -149,16 +161,19 @@
             which has a focus on teaching in english, but providing the high
             Standards of German education.
           </p>
-          <img src="/img/index/gymnasium_gis.png" class="img-fluid shadow-4 position-relative rounded2 my-5 imgAnimSmall" />
-
+          <a href="https://giswashington.org/">
+            <img src="/img/index/gymnasium_gis.png"
+              class="img-fluid shadow-4 position-relative rounded2 my-5 imgAnimSmall" />
+          </a>
           <h1 class="ls-tight font-bolder display-3 mb-5 pt-5 headerAnim">Elementry School.</h1>
           <p class="lead mb-10 paraAnimSmall">
             My educational career started in 2008 at the Grundschule am Zellberg in Meine Germany.
             There I was able to construct the foundations for all my steps ahead.
           </p>
-          <img src="/img/index/elementary_zellberg.png"
-            class="img-fluid shadow-4 position-relative rounded2 my-5 imgAnimSmall" />
-
+          <a href="https://www.grundschule-am-zellberg.de/">
+            <img src="/img/index/elementary_zellberg.png"
+              class="img-fluid shadow-4 position-relative rounded2 my-5 imgAnimSmall" />
+          </a>
           <h1 class="ls-tight font-bolder display-3 pt-5 headerAnim">Certificates.</h1>
           <h1 class="ls-tight display-6 mb-5 pt-5 headerAnim">Completed</h1>
           <div class="card_cert text-white paraAnimSmall">
